--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.3.6"
+    "puppeteer": "^21.3.6",
+    "sentiment": "^5.0.2"
   }
 }
