--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^21.3.6",
-    "sentiment": "^5.0.2"
+    "sentiment": "^5.0.2",
+    "winston": "^3.10.0"
   }
 }
